# IncredibleGame

./: CMakeLists.txt
docs/: README.md
documentation/: unicode-blocks
fonts/: default  shmall  shmooth
include/IO/: FormatterDecorator.hpp  FormatterDecoratorConfigurator.hpp  IOEnvironment.hpp  IOManager.hpp
include/IO/environments/: IOLinuxTerminal.hpp
include/IO/formatters/: .BoxFormatter.hpp.swp  .DialogueFormatter.hpp.swp  AffirmativeNegativeFormatter.hpp  BannerFormatter.hpp  BoxFormatter.hpp  CardFormatter.hpp  CardsFormatter.hpp  ChoiceFormatter.hpp  DialogueFormatter.hpp  DiceFormatter.hpp  LeftOverCommandsFormatter.hpp  RainbowFormatter.hpp  SlashEscapeFormatter.hpp  WidenFormatter.hpp
include/IO/formatters/parser/: Argument.hpp  ArgumentType.hpp  Command.hpp  CommandParser.hpp  ParseUnit.hpp  ParseUnitType.hpp  ParsingFormatterTemplate.hpp
include/events/: Event.hpp  EventChain.hpp  GameState.hpp
include/events/links/: Deck.hpp  Game.hpp  Hand.hpp  IntroductionEvent.hpp  Scenario.hpp
include/events/links/games/: Blackjack.hpp
include/events/links/scenarios/: SadScenario.hpp
include/utils/: UTF_8_utils.hpp
source/: CMakeLists.txt  main.cpp
source/IO/: CMakeLists.txt  FormatterDecorator.cpp  FormatterDecoratorConfigurator.cpp  IOManager.cpp
source/IO/environments/: CMakeLists.txt  IOLinuxTerminal.cpp
source/IO/formatters/: AffirmativeNegativeFormatter.cpp  BannerFormatter.cpp  BoxFormatter.cpp  CMakeLists.txt  CardFormatter.cpp  ChoiceFormatter.cpp  DialogueFormatter.cpp  DiceFormatter.cpp  LeftOverCommandsFormatter.cpp  RainbowFormatter.cpp  SlashEscapeFormatter.cpp  WidenFormatter.cpp
source/IO/formatters/parser/: Argument.cpp  CMakeLists.txt  Command.cpp  CommandParser.cpp  ParsingFormatterTemplate.cpp
source/events/: CMakeLists.txt  Event.cpp  EventChain.cpp  GameState.cpp
source/events/links/: Deck.cpp  Game.cpp  Hand.cpp  IntroductionEvent.cpp  Scenario.cpp
source/events/links/games/: Blackjack.cpp
source/events/links/scenarios/: SadScenario.cpp
source/utils/: CMakeLists.txt  UTF_8_utils.cpp
tests/: CMakeLists.txt
tests/IO/: CMakeLists.txt
tests/IO/environments/: CMakeLists.txt  suite_IOLinuxTerminal_paint.cpp
tests/IO/formatters/: CMakeLists.txt  eq_SlashEscapeFormatter.cpp  eq_log_SlashEscapeFormatter.cpp  suite_BannerFormatter.cpp  suite_BoxFormatter.cpp  suite_CardFormatter.cpp  suite_DiceFormatter.cpp  suite_WidenFormatter.cpp
tests/IO/formatters/parser/: CMakeLists.txt  suite_CommandParser_calculate_code_codepoints.cpp  suite_CommandParser_pair_bracket.cpp  suite_CommandParser_parse_sub_arguments.cpp  suite_CommandParser_parse_to_units.cpp  suite_Command_str.cpp
tests/events/links/: CMakeLists.txt  suite_Deck.cpp
tests/utils/: CMakeLists.txt  suite_UTF_8_utils.cpp  test_utils.cpp  test_utils.hpp
